--- a/css/style.css
+++ b/css/style.css
@@ -34,43 +34,173 @@ li:hover {
     display: flex;
     gap: 23px;
 }
-
+/* main */
 main {
     width: 100%;
-    background-color: #FFFFFF;
+    padding: 59px 108px 76px 108px;
 }
 
-.Main_title {
+h1{
     margin-top: 58px;
     margin-bottom: 139px;
     font-size: 3rem;
     text-align: center;
     color: #13345B;
 }
-form{
-    padding: 0 108px 0 108px;
-}
-label {
-    display: block;
-    margin-bottom: 10px;
-}
-.form_div1,.form_div2{
+/* type text */
+.First_line{
+    width: 100%;
+    height: 111px;
     display: flex;
+    justify-content: space-between;
+    gap: 152px;
+    margin-bottom: 62px;
 }
-input {
+.Second_line{
+    width: 100%;
+    height: 111px;
+    display: flex;
+    justify-content: space-between;
+    gap: 152px;
+    margin-bottom: 194px;
+}
+.form_label{
+    display: block;
+    margin-bottom: 24px;
+}
+#Name,#Lastname,#Age,#Email{
+    width: 100%;
+    height: 58px;
     border: none;
     border-bottom: 5px solid #15C1E7;
-    padding: 5px;
-    margin-bottom: 52px;
+    outline: none;
 }
-input[type=radio]{
-    display: block;
+.form_div{
+    margin-bottom: 62px;
+    font-weight: 700;
+    font-size: 1.5rem;
+    color:  #13345B;
+}
+/* type radio */
+.radio_div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #15C1E7;
+    font-weight: 700;
+    font-size: 2rem;
+}
+.schedule{
+    font-weight: 700;
+    font-size: 1.25rem;
+    color: #13345B;
+}
+.radio_title{
+    width: 35%;
+}
+input{
+    font-size: 2rem;
+}
+input[type="radio"]{
+    width: 16px;
+    height: 16px;
+}
+/* type checkbox */
+.checkbox_div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #15C1E7;
+    font-weight: 700;
+    font-size: 2rem;
+    margin-top: 111px;
+}
+.checkbox_title{
+    width: 35%;
+}
+.checkbox{
+    font-weight: 700;
+    font-size: 1.25rem;
+    color: #13345B;
+}
+input[type="checkbox"]{
+    width: 36px;
+    height: 36px;
+}
+/* type choose file */
+.choose_div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #15C1E7;
+    font-weight: 700;
+    font-size: 2rem;
+    margin-top: 111px;
+    margin-bottom: 166px
+}
+.choose_title{
+    width: 50%;
+}
+button{
+    width: 18%;
+    height: 61px;
+    color: #000000;
+    font-weight: 400;
+    font-size: 2rem;
+}
+button:hover{
+    cursor: pointer;
+}
+.choose_text{
+    color: #000000;
+    font-weight: 400;
+    font-size: 2rem;
+}
+/* submit and reset */
+.last_div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+button[type="submit"]{
+    width: 45%;
+    height: 108px;
+    background-color: #FDD504;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 2.25rem;
+    border: none;
+    border-radius: 15px;
+}
+input[type="reset"]{
+    width: 45%;
+    height: 108px;
+    background-color: #15C1E7;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 2.25rem;
+    border: none;
+    border-radius: 15px;
+}
+button[type="submit"]:hover{
+    cursor: pointer;
+    width: 46%;
+    opacity: .8;
+    color: #000000;
+
+}
+input[type="reset"]:hover{
+    cursor: pointer;
+    width: 46%;
+    opacity: .8;
+    color: #000000;
 }
 /* footer */
 footer{
     width: 100%;
+    height: 419px;
     background-color: #13345B;
-    padding: 0 108px 0 18px;
+    padding: 110px 108px 110px 18px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -86,16 +216,20 @@ footer{
 .fa-square-facebook:hover{
     color: #15C1E7;
     transform: skew(15deg);
+    transition-duration: .4s;
 }
 .fa-instagram:hover{
     color: #FB0110;
     transform: skew(15deg);
+    transition-duration: .4s;
 }
 .fa-twitter:hover{
     color: #75A1F3;
     transform: skew(15deg);
+    transition-duration: .4s;
 }
 .fa-youtube:hover{
     color: #FDD504;
     transform: skew(15deg);
+    transition-duration: .4s;
 }
