--- a/css/style.css
+++ b/css/style.css
@@ -198,9 +198,9 @@ input[type="reset"]:hover{
 /* footer */
 footer{
     width: 100%;
-    height: 419px;
+    /* height: 419px; */
     background-color: #13345B;
-    padding: 110px 108px 110px 18px;
+    /* padding: 110px 108px 110px 18px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
