--- a/css/style.css
+++ b/css/style.css
@@ -50,22 +50,23 @@ h1{
 /* type text */
 .First_line{
     width: 100%;
-    height: 111px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    gap: 152px;
-    margin-bottom: 62px;
+    gap: 62px;
+    margin-bottom: 192px;
 }
-.Second_line{
+/* .Second_line{
     width: 100%;
     height: 111px;
     display: flex;
     justify-content: space-between;
     gap: 152px;
     margin-bottom: 194px;
-}
+} */
 .form_label{
     display: block;
+    font-size: 24px;
     margin-bottom: 24px;
 }
 #Name,#Lastname,#Age,#Email{
@@ -81,22 +82,27 @@ h1{
     font-size: 1.5rem;
     color:  #13345B;
 }
+.form_div input:focus{
+    background-color: rgb(118, 212, 118);
+}
 /* type radio */
-.radio_div{
+.form2{
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: #15C1E7;
-    font-weight: 700;
-    font-size: 2rem;
+    margin-bottom: 111px;
 }
 .schedule{
     font-weight: 700;
     font-size: 1.25rem;
     color: #13345B;
 }
-.radio_title{
+.radio_title,.checkbox_title,.choose_title{
     width: 35%;
+    font-size: 2rem;
+    font-weight: 700;
 }
 input{
     font-size: 2rem;
@@ -106,18 +112,6 @@ input[type="radio"]{
     height: 16px;
 }
 /* type checkbox */
-.checkbox_div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #15C1E7;
-    font-weight: 700;
-    font-size: 2rem;
-    margin-top: 111px;
-}
-.checkbox_title{
-    width: 35%;
-}
 .checkbox{
     font-weight: 700;
     font-size: 1.25rem;
@@ -128,19 +122,7 @@ input[type="checkbox"]{
     height: 36px;
 }
 /* type choose file */
-.choose_div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #15C1E7;
-    font-weight: 700;
-    font-size: 2rem;
-    margin-top: 111px;
-    margin-bottom: 166px
-}
-.choose_title{
-    width: 50%;
-}
+
 button{
     width: 18%;
     height: 61px;
@@ -163,7 +145,7 @@ button:hover{
     align-items: center;
 }
 button[type="submit"]{
-    width: 45%;
+    width: 40%;
     height: 108px;
     background-color: #FDD504;
     color: #ffffff;
@@ -173,7 +155,7 @@ button[type="submit"]{
     border-radius: 15px;
 }
 input[type="reset"]{
-    width: 45%;
+    width: 40%;
     height: 108px;
     background-color: #15C1E7;
     color: #ffffff;
